--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
     "ts-node-dev": "^2.0.0"
