--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js",
+      "dest": "dist/server.js",
       "headers": {
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
       }
